[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "mcp[cli]>=1.26.0",
    "openai>=2.15.0",
    "sentence-transformers>=5.2.0",
]
